assignment2/initial/target/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'if'", "'else'", "'true'", 
                     "'false'", "'for'", "'range'", "'break'", "'continue'", 
                     "'return'", "'func'", "'type'", "'struct'", "'interface'", 
                     "'var'", "'string'", "'int'", "'float'", "'boolean'", 
                     "'const'", "'nil'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'!'", "'&&'", "'||'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "','", "';'", "':'", "'.'", 
                     "':='", "'='", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "BOOLITERAL", "IF", "ELSE", "TRUE", "FALSE", 
                      "FOR", "RANGE", "BREAK", "CONTINUE", "RETURN", "FUNC", 
                      "TYPE", "STRUCT", "INTERFACE", "VAR", "STRING", "INTTYPE", 
                      "FLOAT", "BOOLEAN", "CONST", "NIL", "ID", "INT", "DECINT", 
                      "BININT", "OCTINT", "HEXINT", "REAL", "ADD", "MINUS", 
                      "MUL", "DIV", "MOD", "ADDAS", "MiNUSAS", "MULAS", 
                      "DIVAS", "MODAS", "EQUAL", "NEQUAL", "BIG", "SMALL", 
                      "EBIG", "ESMALL", "NOT", "AND", "OR", "LB", "RB", 
                      "LS", "RS", "LC", "RC", "COMMA", "SEMI", "COLON", 
                      "DOT", "AS1", "AS2", "STRINGLIT", "NL", "WS", "COMMENT1", 
                      "COMMENT2", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_program_tail = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_var = 4
    RULE_vararray = 5
    RULE_const = 6
    RULE_alltype = 7
    RULE_list_id = 8
    RULE_funcdecl = 9
    RULE_functype = 10
    RULE_param = 11
    RULE_funcbody = 12
    RULE_funcstruct = 13
    RULE_list_stmts = 14
    RULE_stmts = 15
    RULE_continue_stmt = 16
    RULE_break_stmt = 17
    RULE_return_stmt = 18
    RULE_call_stmts = 19
    RULE_for_stmt = 20
    RULE_for_condition = 21
    RULE_for_update = 22
    RULE_for_array = 23
    RULE_assign_stmts = 24
    RULE_lhs_assign = 25
    RULE_assign = 26
    RULE_if_stms = 27
    RULE_ifelse = 28
    RULE_condition = 29
    RULE_expr_list = 30
    RULE_expr = 31
    RULE_or_expr = 32
    RULE_and_expr = 33
    RULE_logic_expr = 34
    RULE_compare = 35
    RULE_add_expr = 36
    RULE_mul_expr = 37
    RULE_neg_expr = 38
    RULE_element_expr = 39
    RULE_struct_expr = 40
    RULE_factor_expr = 41
    RULE_access_struct = 42
    RULE_method_element = 43
    RULE_array_element = 44
    RULE_access_field = 45
    RULE_method_op = 46
    RULE_index_op = 47
    RULE_funccall = 48
    RULE_typedecl = 49
    RULE_type_stuct = 50
    RULE_type_inter = 51
    RULE_body_inter = 52
    RULE_parammethod_op = 53
    RULE_parammethod = 54
    RULE_body_type = 55
    RULE_body_body_type = 56
    RULE_literal = 57
    RULE_literal_array = 58
    RULE_space_array = 59
    RULE_space_array_op = 60
    RULE_array = 61
    RULE_array_nested = 62
    RULE_array_list = 63
    RULE_struct_literal = 64
    RULE_struct_param = 65

    ruleNames =  [ "program", "program_tail", "decl", "vardecl", "var", 
                   "vararray", "const", "alltype", "list_id", "funcdecl", 
                   "functype", "param", "funcbody", "funcstruct", "list_stmts", 
                   "stmts", "continue_stmt", "break_stmt", "return_stmt", 
                   "call_stmts", "for_stmt", "for_condition", "for_update", 
                   "for_array", "assign_stmts", "lhs_assign", "assign", 
                   "if_stms", "ifelse", "condition", "expr_list", "expr", 
                   "or_expr", "and_expr", "logic_expr", "compare", "add_expr", 
                   "mul_expr", "neg_expr", "element_expr", "struct_expr", 
                   "factor_expr", "access_struct", "method_element", "array_element", 
                   "access_field", "method_op", "index_op", "funccall", 
                   "typedecl", "type_stuct", "type_inter", "body_inter", 
                   "parammethod_op", "parammethod", "body_type", "body_body_type", 
                   "literal", "literal_array", "space_array", "space_array_op", 
                   "array", "array_nested", "array_list", "struct_literal", 
                   "struct_param" ]

    EOF = Token.EOF
    BOOLITERAL=1
    IF=2
    ELSE=3
    TRUE=4
    FALSE=5
    FOR=6
    RANGE=7
    BREAK=8
    CONTINUE=9
    RETURN=10
    FUNC=11
    TYPE=12
    STRUCT=13
    INTERFACE=14
    VAR=15
    STRING=16
    INTTYPE=17
    FLOAT=18
    BOOLEAN=19
    CONST=20
    NIL=21
    ID=22
    INT=23
    DECINT=24
    BININT=25
    OCTINT=26
    HEXINT=27
    REAL=28
    ADD=29
    MINUS=30
    MUL=31
    DIV=32
    MOD=33
    ADDAS=34
    MiNUSAS=35
    MULAS=36
    DIVAS=37
    MODAS=38
    EQUAL=39
    NEQUAL=40
    BIG=41
    SMALL=42
    EBIG=43
    ESMALL=44
    NOT=45
    AND=46
    OR=47
    LB=48
    RB=49
    LS=50
    RS=51
    LC=52
    RC=53
    COMMA=54
    SEMI=55
    COLON=56
    DOT=57
    AS1=58
    AS2=59
    STRINGLIT=60
    NL=61
    WS=62
    COMMENT1=63
    COMMENT2=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def program_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Program_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.decl()
            self.state = 133
            self.program_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def program_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Program_tailContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_tail" ):
                return visitor.visitProgram_tail(self)
            else:
                return visitor.visitChildren(self)




    def program_tail(self):

        localctx = MiniGoParser.Program_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_tail)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.FUNC, MiniGoParser.TYPE, MiniGoParser.VAR, MiniGoParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.decl()
                self.state = 136
                self.program_tail()
                pass
            elif token in [MiniGoParser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(MiniGoParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def typedecl(self):
            return self.getTypedRuleContext(MiniGoParser.TypedeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.funcdecl()
                pass
            elif token in [MiniGoParser.VAR, MiniGoParser.CONST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.vardecl()
                pass
            elif token in [MiniGoParser.TYPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.typedecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vararray(self):
            return self.getTypedRuleContext(MiniGoParser.VararrayContext,0)


        def var(self):
            return self.getTypedRuleContext(MiniGoParser.VarContext,0)


        def const(self):
            return self.getTypedRuleContext(MiniGoParser.ConstContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.vararray()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.const()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def alltype(self):
            return self.getTypedRuleContext(MiniGoParser.AlltypeContext,0)


        def AS2(self):
            return self.getToken(MiniGoParser.AS2, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MiniGoParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MiniGoParser.VAR)
                self.state = 152
                self.match(MiniGoParser.ID)
                self.state = 153
                self.alltype()
                self.state = 154
                self.match(MiniGoParser.AS2)
                self.state = 155
                self.expr()
                self.state = 156
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(MiniGoParser.VAR)
                self.state = 159
                self.match(MiniGoParser.ID)
                self.state = 160
                self.alltype()
                self.state = 161
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(MiniGoParser.VAR)
                self.state = 164
                self.match(MiniGoParser.ID)
                self.state = 165
                self.match(MiniGoParser.AS2)
                self.state = 166
                self.expr()
                self.state = 167
                self.match(MiniGoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VararrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def space_array(self):
            return self.getTypedRuleContext(MiniGoParser.Space_arrayContext,0)


        def alltype(self):
            return self.getTypedRuleContext(MiniGoParser.AlltypeContext,0)


        def AS2(self):
            return self.getToken(MiniGoParser.AS2, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_vararray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVararray" ):
                return visitor.visitVararray(self)
            else:
                return visitor.visitChildren(self)




    def vararray(self):

        localctx = MiniGoParser.VararrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vararray)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(MiniGoParser.VAR)
                self.state = 172
                self.match(MiniGoParser.ID)
                self.state = 173
                self.space_array()
                self.state = 174
                self.alltype()
                self.state = 175
                self.match(MiniGoParser.AS2)
                self.state = 176
                self.expr()
                self.state = 177
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.match(MiniGoParser.VAR)
                self.state = 180
                self.match(MiniGoParser.ID)
                self.state = 181
                self.space_array()
                self.state = 182
                self.alltype()
                self.state = 183
                self.match(MiniGoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def AS2(self):
            return self.getToken(MiniGoParser.AS2, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)




    def const(self):

        localctx = MiniGoParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(MiniGoParser.CONST)
            self.state = 188
            self.match(MiniGoParser.ID)
            self.state = 189
            self.match(MiniGoParser.AS2)
            self.state = 190
            self.expr()
            self.state = 191
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlltypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MiniGoParser.STRING, 0)

        def INTTYPE(self):
            return self.getToken(MiniGoParser.INTTYPE, 0)

        def FLOAT(self):
            return self.getToken(MiniGoParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MiniGoParser.BOOLEAN, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_alltype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlltype" ):
                return visitor.visitAlltype(self)
            else:
                return visitor.visitChildren(self)




    def alltype(self):

        localctx = MiniGoParser.AlltypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_alltype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.STRING) | (1 << MiniGoParser.INTTYPE) | (1 << MiniGoParser.FLOAT) | (1 << MiniGoParser.BOOLEAN) | (1 << MiniGoParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def list_id(self):
            return self.getTypedRuleContext(MiniGoParser.List_idContext,0)


        def COMMA(self):
            return self.getToken(MiniGoParser.COMMA, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_list_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_id" ):
                return visitor.visitList_id(self)
            else:
                return visitor.visitChildren(self)



    def list_id(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.List_idContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_list_id, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(MiniGoParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 203
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.List_idContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_list_id)
                    self.state = 198
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 199
                    self.match(MiniGoParser.COMMA)
                    self.state = 200
                    self.match(MiniGoParser.ID) 
                self.state = 205
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniGoParser.FUNC, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def param(self):
            return self.getTypedRuleContext(MiniGoParser.ParamContext,0)


        def functype(self):
            return self.getTypedRuleContext(MiniGoParser.FunctypeContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MiniGoParser.FuncbodyContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def funcstruct(self):
            return self.getTypedRuleContext(MiniGoParser.FuncstructContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MiniGoParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.match(MiniGoParser.FUNC)
                self.state = 207
                self.match(MiniGoParser.ID)
                self.state = 208
                self.param()
                self.state = 209
                self.functype()
                self.state = 210
                self.funcbody()
                self.state = 211
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 213
                self.funcstruct()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def space_array_op(self):
            return self.getTypedRuleContext(MiniGoParser.Space_array_opContext,0)


        def alltype(self):
            return self.getTypedRuleContext(MiniGoParser.AlltypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_functype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctype" ):
                return visitor.visitFunctype(self)
            else:
                return visitor.visitChildren(self)




    def functype(self):
